# cloudwatch-sagemaker-demo

./: README.md  cwatch.py  pyproject.toml
