[tool.poetry]
name = "boto3-cloudwatch-demo"
version = "1.0.0"
description = "Demo of fetching cloudwatch metrics using boto3"
authors = ["benbenbang <bn@benbenbang.io>"]

[tool.poetry.dependencies]
python = "3.9.13"
boto3 = "^1.24.46"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
